refactor: change weight variant

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
@@ -16,23 +16,23 @@
 // Last updated: 2 April 2024
 {
     "configMajorVersion": 0,
-    "configMinorVersion": 1,
+    "configMinorVersion": 2,
     "_variant": "A380-842",
     "_icao": "A388",
     "_name": "FBW A380X",
     "_engines": "972B-84",
     "_developer": "FBW",
-    "msnReference": "MSN 225",
-    "weightVariant": "WV003",
+    "msnReference": "MSN XXX",
+    "weightVariant": "WV011",
     "designLimits": {
         "weights": {
-            "maxGw": 512000,   // kg
-            "maxZfw": 373000,  // kg
+            "maxGw": 577000,   // kg
+            "maxZfw": 369000,  // kg
             "minZfw": 300007,  // kg
             "maxGwCg": 43,     // %CG MAC
             "maxZfwCg": 43,    // %CG MAC
             "maxCargo": 51400, // kg
-            "maxFuel": 323546, // kg
+            "maxFuel": 323546, // litres
         },
         "endurance": {
             "range": 8000,   // nm
@@ -42,7 +42,7 @@
             "mlw": [
                 [ 29, 270000 ],
                 [ 29, 375000 ],
-                [ 29.75, 385000 ],
+                [ 29.67, 385000 ],
                 [ 31.5, 395000 ],
                 [ 43, 395000 ],
                 [ 43, 270000 ]
@@ -50,24 +50,28 @@
             "mzfw": [
                 [ 29, 270000 ],
                 [ 29, 360000 ],
-                [ 31.5, 365000 ],
-                [ 43, 365000 ],
+                [ 30.76, 369000 ],
+                [ 43, 369000 ],
                 [ 43, 270000 ],
                 [ 29, 270000 ]
             ],
             "mtow": [
                 [ 29, 270000 ],
                 [ 29, 375000 ],
-                [ 35.75, 510000 ],
-                [ 43, 510000 ],
-                [ 43, 270000 ]
+                [ 37.80, 575000],
+                [ 41, 575000],
+                [ 43, 560000 ],
+                [ 43, 395000 ],
+                [ 39.15, 270000 ],
             ],
             "flight": [
                 [ 29, 270000 ],
                 [ 28, 270000 ],
                 [ 28, 375000 ],
-                [ 35, 510000 ],
-                [ 44, 510000 ],
+                [ 36.70, 560000 ],
+                [ 37.80, 575000 ],
+                [ 41.8, 575000 ],
+                [ 43.8, 560000  ],
                 [ 44, 270000 ],
                 [ 43, 270000 ]
             ]
